fixed skilloption btn actions, remove section divider of HTML, fixed certification links

--- a/index.html
+++ b/index.html
@@ -270,8 +270,14 @@
                         <ul class="options_droper" options-droper="skills" hidden="true" options-active="false"></ul>
                     </div>
                     <h2 class="options_details">
-                        <span class="option_detail" option_type="description" change es="Tipo:" en="Type:">Tipo: <span class="option_detail" option_type="response" change es="" en="" type-label></span></span>
-                        <span class="option_detail" option_type="description" change es="Habilidad:" en="Skill:">Habilidad: <span class="option_detail" option_type="response" change es="" en="" skill-label></span></span>
+                        <span class="option_detail">
+                            <span change es="Tipo:" en="Type:"></span>
+                            <span display_portfolio="type" change es="" en=""></span>
+                        </span>
+                        <span class="option_detail">
+                            <span change es="Habilidad:" en="Skill:"></span>
+                            <span display_portfolio="skill" change es="" en=""></span>
+                        </span>
                     </h2>
                 </div>
                 <div class="cards_container modal_info cards_portfolio_container" portfolio-container></div>
@@ -712,7 +718,7 @@
                 </div>
             </div>
         </section>
-        <div class="section_divider" divider>
+        <!--  <div class="section_divider" divider>
             <figure class="content" quote>
                 <div class="quote_container">
                     <span class="quote_icon quote_start">
@@ -736,7 +742,7 @@
                     <span class="author_info" change es="Ex campeón de la NBA" en="NBA former champion">Ex campeón de la NBA</span>
                 </figcaption>
             </figure>
-        </div>
+        </div> -->
         <section class="section skills_section" id="skills_section">
             <div class="section_content content">
                 <div observer-full>
@@ -756,7 +762,7 @@
                 <div class="cards_container certification_container" certification-container></div>
             </div>
         </section>
-        <div class="section_divider" divider>
+        <!--  <div class="section_divider" divider>
             <figure class="content" quote>
                 <div class="quote_container">
                     <span class="quote_icon quote_start">
@@ -782,7 +788,7 @@
                     <span class="author_info" change es="Ex campeón de la NBA" en="NBA former champion">Ex campeón de la NBA</span>
                 </figcaption>
             </figure>
-        </div>
+        </div> -->
         <section class="section services_section" id="services_section">
             <div class="section_content content">
                 <!--~~TITLE SECTION-->
@@ -850,7 +856,7 @@
                 </div>
             </div>
         </section>
-        <div class="section_divider" divider>
+        <!--  <div class="section_divider" divider>
             <figure class="content" quote>
                 <div class="quote_container">
                     <span class="quote_icon quote_start">
@@ -874,7 +880,7 @@
                     <span class="author_info" change es="Diseñador gráfico / Director de cine" en="Graphic designer / Movie Director"> Diseñador gráfico / Director de cine</span>
                 </figcaption>
             </figure>
-        </div>
+        </div> -->
         <section class="section portfolio_section" id="portfolio_section">
             <div class="section_content content">
                 <div observer-full>
@@ -889,7 +895,7 @@
                 <div class="cards_container cards_hot_container" hot-container></div>
             </div>
         </section>
-        <div class="section_divider" divider>
+        <!-- <div class="section_divider" divider>
             <figure class="content" quote>
                 <div class="quote_container">
                     <span class="quote_icon quote_start">
@@ -915,7 +921,7 @@
                     <span class="author_info" change es="Arquitecto de software" en="Software architect"> Arquitecto de software </span>
                 </figcaption>
             </figure>
-        </div>
+        </div> -->
         <section class="section with_bg contact_section" id="contact_section">
             <picture class="bg_section">
                 <img src="./src/img/backgrounds/contact_day.webp" alt="background in light theme" bg-img="light" hidden />
