change project card tech icons remove and change title color and size

--- a/index.html
+++ b/index.html
@@ -269,18 +269,20 @@
                         </button>
                         <ul class="options_droper" options-droper="skills" hidden="true" options-active="false"></ul>
                     </div>
+                </div>
+                <div class="cards_container modal_info cards_portfolio_container" portfolio-container></div>
+                <div class="portfolio_details">
                     <h2 class="options_details">
                         <span class="option_detail">
-                            <span change es="Tipo:" en="Type:"></span>
+                            <span class="accent_text" change es="Tipo:" en="Type:"></span>
                             <span display_portfolio="type" change es="" en=""></span>
                         </span>
                         <span class="option_detail">
-                            <span change es="Habilidad:" en="Skill:"></span>
+                            <span class="accent_text" change es="Habilidad:" en="Skill:"></span>
                             <span display_portfolio="skill" change es="" en=""></span>
                         </span>
                     </h2>
                 </div>
-                <div class="cards_container modal_info cards_portfolio_container" portfolio-container></div>
             </div>
         </dialog>
         <div class="menu_controler phone_menu_controler" position-menu="" phone-menu>
@@ -4988,7 +4990,7 @@
             <img class="img_card" card-img />
             <div class="info_project_container">
                 <h2 class="title" change es="" en="" card-title></h2>
-                <h3 class="subtitle" change es="Realizado Con:" en="Made With:"></h3>
+                <!-- <h3 class="subtitle" change es="Realizado Con:" en="Made With:"></h3> -->
                 <p class="description" change es="" en="" card-description></p>
                 <div class="icons_project_container" card-icons-container></div>
                 <button type="button" class="more_btn btn href_btn" tabindex="-1" link-ref="" card-action-btn>
