--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                 <div class="portfolio_details">
                     <h2 class="options_details">
                         <span class="option_detail">
-                            <span class="accent_text" change es="Tipo:" en="Type:"></span>
+                            <span class="accent_text" change es="Tipo de Proyecto:" en="Project Type:"></span>
                             <span display_portfolio="type" change es="" en=""></span>
                         </span>
                         <span class="option_detail">
@@ -639,31 +639,7 @@
                 </div>
             </div>
         </nav>
-        <div class="section_divider" divider>
-            <figure class="content" quote>
-                <div class="quote_container">
-                    <span class="quote_icon quote_start">
-                        <span class="icon_container">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                                <path d="M14.017 21v-7.391c0-5.704 3.731-9.57 8.983-10.609l.995 2.151c-2.432.917-3.995 3.638-3.995 5.849h4v10h-9.983zm-14.017 0v-7.391c0-5.704 3.748-9.57 9-10.609l.996 2.151c-2.433.917-3.996 3.638-3.996 5.849h3.983v10h-9.983z" />
-                            </svg>
-                        </span>
-                    </span>
-                    <q class="quote" change es="No tengo talentos especiales. Sólo soy apasionadamente curioso" en="I have no special talent. I'm just passionately curious"></q>
-                    <span class="quote_icon quote_end">
-                        <span class="icon_container">
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                                <path d="M9.983 3v7.391c0 5.704-3.731 9.57-8.983 10.609l-.995-2.151c2.432-.917 3.995-3.638 3.995-5.849h-4v-10h9.983zm14.017 0v7.391c0 5.704-3.748 9.571-9 10.609l-.996-2.151c2.433-.917 3.996-3.638 3.996-5.849h-3.983v-10h9.983z" />
-                            </svg>
-                        </span>
-                    </span>
-                </div>
-                <figcaption class="author_container">
-                    <span class="author"><i>Albert Einstein</i></span>
-                    <span class="author_info" change es="Premio novel de física" en="Nobel prize in physics"></span>
-                </figcaption>
-            </figure>
-        </div>
+
         <section class="section about_section" id="about_section">
             <div class="section_content content flex flex_responsive">
                 <div class="about_salute responsive_content">
@@ -720,6 +696,31 @@
                 </div>
             </div>
         </section>
+        <div class="section_divider" divider>
+            <figure class="content" quote>
+                <div class="quote_container">
+                    <span class="quote_icon quote_start">
+                        <span class="icon_container">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                <path d="M14.017 21v-7.391c0-5.704 3.731-9.57 8.983-10.609l.995 2.151c-2.432.917-3.995 3.638-3.995 5.849h4v10h-9.983zm-14.017 0v-7.391c0-5.704 3.748-9.57 9-10.609l.996 2.151c-2.433.917-3.996 3.638-3.996 5.849h3.983v10h-9.983z" />
+                            </svg>
+                        </span>
+                    </span>
+                    <q class="quote" change es="No tengo talentos especiales. Sólo soy apasionadamente curioso" en="I have no special talent. I'm just passionately curious"></q>
+                    <span class="quote_icon quote_end">
+                        <span class="icon_container">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                <path d="M9.983 3v7.391c0 5.704-3.731 9.57-8.983 10.609l-.995-2.151c2.432-.917 3.995-3.638 3.995-5.849h-4v-10h9.983zm14.017 0v7.391c0 5.704-3.748 9.571-9 10.609l-.996-2.151c2.433-.917 3.996-3.638 3.996-5.849h-3.983v-10h9.983z" />
+                            </svg>
+                        </span>
+                    </span>
+                </div>
+                <figcaption class="author_container">
+                    <span class="author"><i>Albert Einstein</i></span>
+                    <span class="author_info" change es="Premio novel de física" en="Nobel prize in physics"></span>
+                </figcaption>
+            </figure>
+        </div>
         <!--  <div class="section_divider" divider>
             <figure class="content" quote>
                 <div class="quote_container">
