general style, active section btn function ready

--- a/index.html
+++ b/index.html
@@ -329,25 +329,25 @@
                 </button>
             </div>
             <div class="nav_menu_link_btns">
-                <button type="button" class="phone_menu_btn" name="hero_section" action-menu section-action section-ref="hero">
+                <button type="button" class="phone_menu_btn" name="hero_section" btn-active="false" action-menu section-action section-ref="hero">
                     <span class="label_btn" change en="Home" es="Inicio">Inicio</span>
                 </button>
-                <button type="button" class="phone_menu_btn" name="about_section" action-menu section-action section-ref="about">
+                <button type="button" class="phone_menu_btn" name="about_section" btn-active="false" action-menu section-action section-ref="about">
                     <span class="label_btn" change en="About Me" es="Quien Soy">Quien Soy</span>
                 </button>
-                <button type="button" class="phone_menu_btn" name="services_section" action-menu section-action section-ref="services">
+                <button type="button" class="phone_menu_btn" name="services_section" btn-active="false" action-menu section-action section-ref="services">
                     <span class="label_btn" change en="Services" es="Servicios">Servicios</span>
                 </button>
-                <button type="button" class="phone_menu_btn" name="portfolio_section" action-menu section-action section-ref="portfolio">
+                <button type="button" class="phone_menu_btn" name="portfolio_section" btn-active="false" action-menu section-action section-ref="portfolio">
                     <span class="label_btn" change en="Portfolio" es="Portafolio">Portafolio</span>
                 </button>
-                <button type="button" class="phone_menu_btn" name="skills_section" action-menu section-action section-ref="skills">
+                <button type="button" class="phone_menu_btn" name="skills_section" btn-active="false" action-menu section-action section-ref="skills">
                     <span class="label_btn" change en="Skills" es="Habilidades">Habilidades</span>
                 </button>
-                <button type="button" class="phone_menu_btn" name="contact_section" action-menu section-action section-ref="contact">
+                <button type="button" class="phone_menu_btn" name="contact_section" btn-active="false" action-menu section-action section-ref="contact">
                     <span class="label_btn" change en="Contact" es="Contacto">Contacto</span>
                 </button>
-                <button type="button" class="phone_menu_btn" name="legals_section" action-menu section-action section-ref="legals">
+                <button type="button" class="phone_menu_btn" name="legals_section" btn-active="false" action-menu section-action section-ref="legals">
                     <span class="label_btn" change en="Legals" es="Legales">Legales</span>
                 </button>
             </div>
@@ -534,7 +534,7 @@
                     </div>
                 </button>
                 <div class="menu_controler nav_menu_controler">
-                    <button type="button" class="nav_btn main_nav_btn" name="hero_section" section-action section-ref="hero">
+                    <button type="button" class="nav_btn main_nav_btn" name="hero_section" btn-active="false" section-action section-ref="hero">
                         <span class="icon_container icon_btn">
                             <svg class="icon_svg nav_menu_icon_svg" id="home_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 24">
                                 <title>Inicio</title>
@@ -543,7 +543,7 @@
                         </span>
                         <span class="label_btn" change es="Inicio" en="Home">Inicio</span>
                     </button>
-                    <button type="button" class="nav_btn about_nav_btn" name="about_section" section-action section-ref="about">
+                    <button type="button" class="nav_btn about_nav_btn" name="about_section" btn-active="false" section-action section-ref="about">
                         <span class="icon_container icon_btn">
                             <svg class="icon_svg nav_menu_icon_svg" class="about_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 24">
                                 <title>Acerca de</title>
@@ -553,7 +553,7 @@
                         </span>
                         <span class="label_btn" change es="Quien Soy" en="About Me">Quien Soy</span>
                     </button>
-                    <button type="button" class="nav_btn services_nav_btn" name="services_section" section-action section-ref="services">
+                    <button type="button" class="nav_btn services_nav_btn" name="services_section" btn-active="false" section-action section-ref="services">
                         <span class="icon_container icon_btn">
                             <svg class="icon_svg nav_menu_icon_svg" id="services_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 24">
                                 <title>Servicios</title>
@@ -565,7 +565,7 @@
                         </span>
                         <span class="label_btn" change en="Services" es="Servicios">Servicios</span>
                     </button>
-                    <button type="button" class="nav_btn portfolio_nav_btn" name="portfolio_section" section-action section-ref="portfolio">
+                    <button type="button" class="nav_btn portfolio_nav_btn" name="portfolio_section" btn-active="false" section-action section-ref="portfolio">
                         <span class="icon_container icon_btn">
                             <svg class="icon_svg nav_menu_icon_svg" id="portfolio_icon_svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                                 <title>Portafolio</title>
@@ -575,7 +575,7 @@
                         </span>
                         <span class="label_btn" change en="Portfolio" es="Portafolio">Portafolio</span>
                     </button>
-                    <button type="button" class="nav_btn skills_nav_btn" name="skills_section" section-action section-ref="skills">
+                    <button type="button" class="nav_btn skills_nav_btn" name="skills_section" btn-active="false" section-action section-ref="skills">
                         <span class="icon_container icon_btn">
                             <svg class="icon_svg nav_menu_icon_svg" id="skills_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 24">
                                 <title>Habilidades</title>
@@ -587,7 +587,7 @@
                         </span>
                         <span class="label_btn" change en="Skills" es="Habilidades">Habilidades</span>
                     </button>
-                    <button type="button" class="nav_btn contact_nav_btn" name="contact_section" section-action section-ref="contact">
+                    <button type="button" class="nav_btn contact_nav_btn" name="contact_section" btn-active="false" section-action section-ref="contact">
                         <span class="icon_container icon_btn">
                             <svg class="icon_svg nav_menu_icon_svg" id="contact_icon_svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 24 24">
                                 <title>Contacto</title>
@@ -596,7 +596,7 @@
                         </span>
                         <span class="label_btn" change en="Contact" es="Contacto">Contacto</span>
                     </button>
-                    <button type="button" class="nav_btn legals_nav_btn" name="legals_section" section-action section-ref="legals">
+                    <button type="button" class="nav_btn legals_nav_btn" name="legals_section" btn-active="false" section-action section-ref="legals">
                         <span class="icon_container icon_btn">
                             <svg class="icon_svg nav_menu_icon_svg" id="legals_icon_svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                                 <path
@@ -752,7 +752,7 @@
             <div class="section_content content">
                 <!--~~TITLE SECTION-->
                 <div observer-full>
-                    <h1 class="title_section animation_up" id="title_services" change es="Servicios" en="Services">Servicios</h1>
+                    <h1 class="title_section" id="title_services" change es="Servicios" en="Services" animation-text>Servicios</h1>
                 </div>
 
                 <div class="grid_container">
